--- a/content/posts/Life/Diary/2023-10-29.md
+++ b/content/posts/Life/Diary/2023-10-29.md
@@ -4,10 +4,12 @@ date: 2023-10-29T17:59:04+08:00
 image: ""
 tags: ["thoughts","quantum","symbol"]
 description:  '量子力学中的 nabla 和电动力学中引入的符号含义并不相同'
+lastmod: '2023-10-29'
 categories: 	
     - "Life"
     - "Diary"
-extra: "Some extra symbol in math function like '\' is for suitable for blog system'"
+extra: "Some extra symbol in math function like '\' is for suitable for blog 
+system'"
 ---
 
 
